Fix jumbotron spacing.

--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -11,7 +11,7 @@
     margin-bottom: 0;
 
     @include media-breakpoint-up("md") {
-      padding-top: 105px; // 128px
+      padding-top: 103px; // 128px
       padding-bottom: 282px; // 192px + 96px
     }
 
